2002-02-11  Jody Goldberg <jody@gnome.org>

	* src/stf.c (stf_init) : improve naming of the text exporter.

	http://bugzilla.gnome.org/show_bug.cgi?id=71172
	* src/validation.c (validation_eval) : keep the initial value around

	http://bugzilla.gnome.org/show_bug.cgi?id=69328
	* src/expr-name.c (expr_name_remove) : If nothing is using the name
	  then the unlink unrefs it and it was deleted before we could clear
	  it.  Add a ref wrapper to ensurethat we can clear things.

2002-02-10  Jody Goldberg <jody@gnome.org>

	* src/commands.c (cmd_set_text) : doh!

2002-02-07  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/analysis-tools.c (anova_single_factor_tool) : be more
	  careful with precision.
	* src/rangefuncs.c (range_sum) : improve precision through 2 pass
	  algorithm
	(range_sumsq) : ditto

2002-01-31  Jody Goldberg <jody@gnome.org>

	* src/workbook-control.c (wb_control_parse_and_jump) : make defined
	  names absolute.

2002-02-01  Jody Goldberg <jody@gnome.org>

	* version bump.

2002-01-30  Jody Goldberg <jody@gnome.org>

	* Release 1.0.4

2002-01-30  Jody Goldberg <jody@gnome.org>

	* src/dialogs/dialog-autoformat.c (templates_load) : changes to
	  category_group_get_templates_list.

	* src/xml-io-autoft.c (gnumeric_xml_write_format_template) : take a
	  context not a control to clarify things.
	(gnumeric_xml_read_format_template) : ditto.

	* src/workbook.c (workbook_persist_file_save) : changes to
	  wb_view_save_as.

	* src/io-context.c (io_context_destroy) : impl is a command context now.
	(gnumeric_io_context_new) : weaken requirements so that all we need is
	  a command context.  Not strictly necessary, but makes it less likely
	  that people will get confused.

	* src/workbook-view.c (wb_view_save_as) : Take a command context not a
	  workbook control to avoid confusing what we are saving.
	(wb_view_save) : ditto.
	(wb_view_selection_desc) : Implement using an explicit control.
	(wb_view_open_custom) : add a missing precondition.