@@ -93,8 +93,8 @@ LUPDecomp (gnum_float **A, gnum_float **LU, int *P, int n)
 		int mov = -1;
 
 		for (j = i; j < n; j++)
-			if (abs (LU[i][j]) > max) {
-				max = abs (LU[i][j]);
+			if (fabs (LU[i][j]) > max) {
+				max = fabs (LU[i][j]);
 				mov = j;
 			}
 		if (max == 0) return 2;			/*all 0s; singular*/
